Fixed issue with certain media types making thumbnail image preview not fit the smaller thumbnails.

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -2251,15 +2251,13 @@ body#subscriptions.index {
 .content-preview {
   position: relative; }
   .content-preview .inner {
-    height: 100%; }
-
-.content-preview.photos .inner, .content-preview.video .inner {
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover; }
+    height: 100%;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover; }
 
 .content-preview.watchmen {
   background: #ffe344;
